<resources>
    <string name="app_name">بازدید از محل v1.0</string>
    <string name="Downloading_data"> دریافت اطلاعات </string>
    <string name="datePicker">انتخاب زمان</string>
    <string name="menu_upload_all">انتخاب همه کارتابل های بازدید شده</string>
    <string name="menu_unvisit">نشانه گذاری به عنوان بازدید نشده</string>
    <string name="menu_restore">بازگشت به حالت ابتدایی</string>
    <string name="dialog_update_title">به روز رسانی</string>
    <string name="dialog_preferences_title">تنظیمات</string>
    <string name="dialog_cancel_title">  انصراف دادن </string>
    <string name="dialog_cancel_body"> ایا مطمئن هستید؟ </string>
    <string name="dialog_delete_title">حذف انشعاب</string>
    <string name="dialog_delete_body">آیا از حذف انشعاب مورد نظر اطمینان دارید؟</string>
    <string name="dialog_receive_data">در حال دریافت اطلاعات از سرور</string>
    <string name="dialog_send_data"> در حال ارسال اطلاعات به سرور</string>
    <string name="dialog_back_title">خروج از پرونده</string>
    <string name="dialog_back_body">توجه: در صورت خروج, پرونده به عنوان بازدید نشده ذخیره می گردد.</string>
    <string name="dialog_contact_title">ارتباط با مشترک</string>
    <string name="dialog_contact_body">در صورت تمایل به برقراری ارتباط با مشترک:\n "%s"  \n\nیکی از گزینه های زیر را انتخاب  نمایید.</string>
    <string name="dialog_exit_title"> خروج </string>
    <string name="dialog_exit_body"> آیا قصد خروج از حساب کاربری خود را دارید؟ </string>
    <string name="dialog_upload_title">ارسال به سرور</string>
    <string name="dialog_upload_body">آیا از صحت اطلاعات ارسالی به سرور مطمئن هستید؟  \n\nاطلاعات ارسالی: %s پرونده انتخاب شده است</string>
    <string name="dialog_cartable_title">ذخیره کارتابل</string>
    <string name="dialog_cartable_body">آیا از صحت اطلاعات ثبت شده در پرونده مطمئن هستید؟</string>
    <string name="dialog_button_upload">ارسال</string>
    <string name="dialog_button_return">بازگشت</string>
    <string name="dialog_button_exit">خروج</string>
    <string name="dialog_button_confirm">تایید</string>
    <string name="yes">بله</string>
    <string name="no">خیر</string>
    <string name="ok">انتخاب</string>
    <string name="cancel">لغو</string>
    <string name="dialog_"></string>
    <string name="user_name"> نام کاربری </string>
    <string name="pass_word"> گذرواژه </string>
    <string name="login_button"> ورود </string>
    <string name="register"> ثبت نام </string>
    <string name="invalid_login"> اطلاعات ورود اشتباه است </string>
    <string name="sms"> پیام </string>
    <string name="call"> تماس </string>
    <string name="sms_call"> برقراری تماس </string>
    <string name="default_sms">متن پیش فرض ارتباط از طریق پیامک</string>
    <string name="body_sms"> ماموری برای بررسی کنتور شما اعزام می شود لطفا در صورت عدم حضور اطلاع دهید </string>
    <string name="from_date"> از تاریخ </string>
    <string name="to_date"> تا تاریخ </string>
    <string name="pie_chart">pie.htm</string>
    <string name="html_path">file:///android_asset/Content/Charts/</string>
    <string name="search"> جستجو </string>
    <string name="bill_identification"> شناسه قبض </string>
    <string name="subscription_number"> اشتراک </string>
    <string name="fabrik_number"> بدنه کنتور </string>
    <string name="first_name"> نام </string>
    <string name="last_name"> نام خانوادگی </string>
    <string name="Page">Page</string>
    <string name="of">of</string>
    <string name="next"> بعدی </string>
    <string name="previous"> قبلی </string>
    <string name="preferences_delete"> حذف </string>
    <string name="preferences_cancel"> حذف </string>
    <string name="preferences_register"> ثبت </string>
    <string name="preferences_update"> بروزرسانی </string>
    <string name="preferences_update_observation"> دریافت لیست مشاهدات </string>
    <string name="webservices_address"> ادرس سرور </string>
    <string name="port"> گذرگاه </string>
    <string name="cartable_state_reg"> بازدید شده </string>
    <string name="cartable_state_not_reg"> بازدید نشده </string>
    <string name="cartable_state_faulty"> دارای خطا </string>
    <string name="cartable_state_send"> ارسال موفق </string>
    <string name="cartable_status"> وضعیت </string>
    <string name="cartable_request_number"> درخواست </string>
    <string name="cartable_subscription_name">  مشترک </string>
    <string name="cartable_address"> ادرس </string>
    <string name="cartable_phone"> تلفن </string>
    <string name="cartable_tab_place_info">مشخصات</string>
    <string name="cartable_tab_demanded_branch"> درخواستی  </string>
    <string name="cartable_tab_new_branch"> انشعاب جدید </string>
    <string name="cartable_tab_inc_dec">  افزایش/کاهش </string>
    <string name="cartable_tab_branch_collector"> جمع اوری انشعاب </string>
    <string name="cartable_tab_electric_supply"> تامین برق </string>
    <string name="cartable_tab_visit_history"> مشاهدات </string>
    <string name="cartable_tab_commitments"> تعهدات </string>
    <string name="cartable_tab_material"> لوازم  </string>
    <string name="place_info_visit_date"> تاریخ بازدید </string>
    <string name="place_info_section"> بخش </string>
    <string name="place_info_floor_count"> تعداد طبقه </string>
    <string name="place_info_geographical_area"> محدوده </string>
    <string name="place_info_unit_count"> تعداد واحد </string>
    <string name="place_info_village_box"> روستایی </string>
    <string name="place_info_long"> طول جغرافیایی </string>
    <string name="place_info_lat"> عرض جغرافیایی </string>
    <string name="place_info_show_map"> نمایش مکان </string>
    <string name="place_info_mark_map"> ثبت مکان </string>
    <string name="new_branch"> انشعاب جدید </string>
    <string name="new_branch_phase"> فاز </string>
    <string name="new_branch_amper"> امپر </string>
    <string name="new_branch_power"> قدرت </string>
    <string name="new_branch_taarefe"> تعرفه </string>
    <string name="new_branch_voltage"> ولتاژ </string>
    <string name="new_branch_count"> تعداد </string>
    <string name="new_branch_create"> ایجاد انشعاب جدید </string>
    <string name="new_branch_type"> نوع مشترک </string>
    <string name="new_branch_geographical"> محدوده جغرافیایی </string>
    <string name="power_unit"> کیلو وات </string>
    <string name="list_item_branch_add_button">ایجاد انشعاب جدید</string>
    <string name="list_item_branch_edit_button">تغییر انشعاب موجود</string>
    <string name="list_item_branch_collect_button">جمع آوری انشعاب موجود</string>
    <string name="change_branch">  تبدیل قدرت </string>
    <string name="collect_branch"> انشعاب موجود </string>
    <string name="change_branch_type"> نوع مشترک </string>
    <string name="change_branch_create"> انشعاب موجود </string>
    <string name="change_branch_tariff"> تعرفه </string>
    <string name="change_branch_voltage"> ولتاژ </string>
    <string name="change_branch_temp_permanent"> وضعیت انشعاب </string>
    <string name="change_branch_power"> قدرت </string>
    <string name="change_branch_old_power"> قدرت موجود </string>
    <string name="change_branch_amper"> امپر </string>
    <string name="change_branch_old_amper"> امپر موجود </string>
    <string name="change_branch_name">  نام مشترک </string>
    <string name="change_branch_address"> ادرس </string>
    <string name="change_branch_phase"> فاز </string>
    <string name="change_branch_old_phase"> فاز موجود </string>
    <string name="change_branch_phase_amper"> قدرت/آمپر/فاز </string>
    <string name="change_branch_doc_number"> پرونده </string>
    <string name="change_branch_branch_code"> اشتراک </string>
    <string name="change_branch_fabrik_number"> بدنه </string>
    <string name="change_branch_status"> وضعیت </string>
    <string name="change_branch_merge"> ادغام </string>
    <string name="change_branch_separation"> تفکیک </string>
    <string name="change_branch_increase"> افزایش </string>
    <string name="change_branch_decrease"> کاهش </string>
    <string name="Cartable_send_server"> ارسال به سرور </string>
    <string name="cartable_recieve_server"> دریافت </string>
    <string name="electric_supply_avail_network"> از شبکه موجود </string>
    <string name="electric_supply_create_network"> نیاز به ایجاد شبکه </string>
    <string name="electric_supply_not_possible"> عدم امکان تامین برق </string>
    <string name="electric_supply_not_possible_due_to"> به دلیل </string>
    <string name="exceptions_list">لیست مشاهده</string>
    <string name="exceptions_groups">دسته بندی مشاهدات</string>
    <string name="selected_exception">مشاهدات انتخاب شده</string>
    <string name="item_exist">این مورد قبلا اضافه شده</string>
    <string name="msg_postalcode_invalid">کدپستی وارد شده کمتر از %d رقم میباشد.</string>
    <string name="msg_invalid_national_code">کد ملی وارد شده نا معتبر است</string>
    <string name="txt_identity">شناسایی (ردیف/کدمامور/روزکار/کد منطقه)</string>
    <string name="description">توضیحات</string>
    <string name="newValue">مقدار جدید</string>
    <string name="cartable_measurment"> اضافه کردن کالا </string>
    <string name="cartable_measurment_choose_template">  انتخاب قالب: </string>
    <string name="cartable_measurment_add">  اضافه شود  </string>
    <string name="cartable_measurment_subscrip"> اشتراک </string>
    <string name="cartable_measurment_goods"> کالا </string>
    <string name="cartable_measurment_estimated">تعداد </string>
    <string name="cartable_measurment_estimated_unit"> مقدار/واحد </string>
    <string name="cartable_measurment_unit"> واحد </string>
    <string name="cartable_measurment_responsible"> متعهد </string>
    <string name="cartable_measurment_status"> وضعیت </string>
    <string name="cartable_measurment_create"> اضافه کردن کالا </string>
    <string name="cartable_measurment_finish"> ذخیره کارتابل </string>
    <string name="cartable_next_button">بعدی</string>
    <string name="cartable_previous_button">قبلی</string>
    <string name="cartable_measurement_materials_status">نصب</string>
    <string name="src_invalid">  ادرس سرور وارد نشده است </string>
    <string name="port_invalid"> پورت وارد نشده است  </string>
    <string name="preferences_saved">تنظیمات با موفقیت ذخیره گردید.</string>
    <string name="empty_field"> متغیرها درست مقداردهی نشده اند </string>
    <string name="change_branch_empty_phase"> اطلاعات انشعاب موجود دریافت نشده است </string>
    <string name="empty_fabrik"> شماره بدنه وارد نشده است </string>
    <string name="wrong_power"> قدرت اشتباه وارد شده </string>
    <string name="zone_code"> کد محدوده </string>
    <string name="trfh_code"> سرتعرفه </string>
    <string name="option"> گزینه </string>
    <string name="family_code"> کد خانوار </string>
    <string name="phase"> فاز </string>
    <string name="amper"> آمپر </string>
    <string name="contract_demand"> دیماند قرارداد </string>
    <string name="voltage_code"> کد ولتاژ </string>
    <string name="work_stream"> گردش کار </string>
    <string name="institution_code"> کد موسسه </string>
    <string name="activity_code"> کد فعالیت </string>
    <string name="postal_type"> نوع پست </string>
    <string name="atmosphere_code"> کد فشار </string>
    <string name="authorization_allowed_demand"> دیماند مجاز پروانه </string>
    <string name="service_line_code"> کد خط سرویس </string>
    <string name="contract_date"> تاریخ قرارداد </string>
    <string name="establish_date"> تاریخ ایجاد </string>
    <string name="authorization_expirement_date"> تاریخ انقضا پروانه </string>
    <string name="temporary_dec_expirement_date"> تاریخ انقضا کاهش موقت </string>
    <string name="main_power"> قدرت اصلی </string>
    <string name="trf_code"> کد تعرفه </string>
    <string name="misscount_code"> کد بدحسابی </string>
    <string name="latest_visit_date"> تاریخ اخرین قرائت </string>
    <string name="latest_sell_price"> مبلغ اخرین فروش </string>
    <string name="latest_receive_date"> تاریخ اخرین وصول </string>
    <string name="latest_receive_price"> مبلغ اخرین وصول </string>
</resources>