<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:background="@drawable/info_table_shape_2"
        android:padding="5dp"
        android:id="@+id/table_two"
        android:stretchColumns="0,1,2,3"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TableRow
            android:gravity="end">
            <TextView
                android:background="@drawable/cell_shape"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:id="@+id/option"
                android:textSize="15sp"
                android:layout_column="0"
                android:layout_width="0dp"
                android:layout_weight="1"/>
            <TextView
                android:layout_margin="5dp"
                android:padding="5dp"
                android:text="@string/option"
                android:textSize="15sp"
                android:layout_column="1"
                android:layout_width="0dp"
                android:layout_weight="1"/>
            <TextView
                android:background="@drawable/cell_shape"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:id="@+id/code_tariff"
                android:textSize="15sp"
                android:layout_column="2"
                android:layout_width="0dp"
                android:layout_weight="1"/>
            <TextView
                android:padding="5dp"
                android:layout_margin="5dp"
                android:text="@string/trfh_code"
                android:textSize="15sp"
                android:layout_column="3"
                android:layout_width="0dp"
                android:layout_weight="1"/>
        </TableRow>
        <TableRow
            android:gravity="end">
            <TextView
                android:background="@drawable/cell_shape"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:id="@+id/phase"
                android:textSize="15sp"
                android:layout_column="0"
                android:layout_width="0dp"
                android:layout_weight="1"/>
            <TextView
                android:layout_margin="5dp"
                android:padding="5dp"
                android:text="@string/phase"
                android:textSize="15sp"
                android:layout_column="1"
                android:layout_width="0dp"
                android:layout_weight="1"/>
            <TextView
                android:background="@drawable/cell_shape"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:id="@+id/family_code"
                android:textSize="15sp"
                android:layout_column="2"
                android:layout_width="0dp"
                android:layout_weight="1"/>
            <TextView
                android:layout_margin="5dp"
                android:padding="5dp"
                android:text="@string/family_code"
                android:textSize="15sp"
                android:layout_column="3"
                android:layout_width="0dp"
                android:layout_weight="1"/>
        </TableRow>
        <TableRow
            android:gravity="end">
            <TextView
                android:background="@drawable/cell_shape"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:id="@+id/contract_demand"
                android:textSize="15sp"
                android:layout_column="0"
                android:layout_width="0dp"
                android:layout_weight="1"/>
            <TextView
                android:layout_margin="5dp"
                android:padding="5dp"
                android:text="@string/contract_demand"
                android:textSize="15sp"
                android:layout_column="1"
                android:layout_width="0dp"
                android:layout_weight="1"/>
            <TextView
                android:background="@drawable/cell_shape"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:id="@+id/amper"
                android:textSize="15sp"
                android:layout_column="2"
                android:layout_width="0dp"
                android:layout_weight="1"/>
            <TextView
                android:layout_margin="5dp"
                android:padding="5dp"
                android:text="@string/amper"
                android:textSize="15sp"
                android:layout_column="3"
                android:layout_width="0dp"
                android:layout_weight="1"/>
        </TableRow>
        <TableRow
            android:gravity="end">
            <TextView
                android:background="@drawable/cell_shape"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:id="@+id/work_stream"
                android:textSize="15sp"
                android:layout_column="0"
                android:layout_width="0dp"
                android:layout_weight="1"/>
            <TextView
                android:layout_margin="5dp"
                android:padding="5dp"
                android:text="@string/work_stream"
                android:textSize="15sp"
                android:layout_column="1"
                android:layout_width="0dp"
                android:layout_weight="1"/>
            <TextView
                android:background="@drawable/cell_shape"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:id="@+id/voltage_code"
                android:textSize="15sp"
                android:layout_column="2"
                android:layout_width="0dp"
                android:layout_weight="1"/>
            <TextView
                android:layout_margin="5dp"
                android:padding="5dp"
                android:text="@string/voltage_code"
                android:textSize="15sp"
                android:layout_column="3"
                android:layout_width="0dp"
                android:layout_weight="1"/>
        </TableRow>
        <TableRow
            android:gravity="end">
            <TextView
                android:background="@drawable/cell_shape"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:id="@+id/activity_code"
                android:textSize="15sp"
                android:layout_column="0"
                android:layout_width="0dp"
                android:layout_weight="1"/>
            <TextView
                android:layout_margin="5dp"
                android:padding="5dp"
                android:text="@string/activity_code"
                android:textSize="15sp"
                android:layout_column="1"
                android:layout_width="0dp"
                android:layout_weight="1"/>
            <TextView
                android:background="@drawable/cell_shape"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:id="@+id/institution_code"
                android:textSize="15sp"
                android:layout_column="2"
                android:layout_width="0dp"
                android:layout_weight="1"/>
            <TextView
                android:layout_margin="5dp"
                android:padding="5dp"
                android:text="@string/institution_code"
                android:textSize="15sp"
                android:layout_column="3"
                android:layout_width="0dp"
                android:layout_weight="1"/>
        </TableRow>
        <TableRow
            android:gravity="end">
            <TextView
                android:background="@drawable/cell_shape"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:id="@+id/atmosphere_code"
                android:textSize="15sp"
                android:layout_column="0"
                android:layout_width="0dp"
                android:layout_weight="1"/>
            <TextView
                android:layout_margin="5dp"
                android:padding="5dp"
                android:text="@string/atmosphere_code"
                android:textSize="15sp"
                android:layout_column="1"
                android:layout_width="0dp"
                android:layout_weight="1"/>
            <TextView
                android:background="@drawable/cell_shape"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:id="@+id/postal_type"
                android:textSize="15sp"
                android:layout_column="2"
                android:layout_width="0dp"
                android:layout_weight="1"/>
            <TextView
                android:layout_margin="5dp"
                android:padding="5dp"
                android:text="@string/postal_type"
                android:textSize="15sp"
                android:layout_column="3"
                android:layout_width="0dp"
                android:layout_weight="1"/>
        </TableRow>
        <TableRow
            android:gravity="end">
            <TextView
                android:background="@drawable/cell_shape"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:id="@+id/service_line_code"
                android:textSize="15sp"
                android:layout_column="0"
                android:layout_width="0dp"
                android:layout_weight="1"/>
            <TextView
                android:layout_margin="5dp"
                android:padding="5dp"
                android:text="@string/service_line_code"
                android:textSize="15sp"
                android:layout_column="1"
                android:layout_width="0dp"
                android:layout_weight="1"/>
            <TextView
                android:background="@drawable/cell_shape"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:id="@+id/authorization_allowed_demand"
                android:textSize="15sp"
                android:layout_column="2"
                android:layout_width="0dp"
                android:layout_weight="1"/>
            <TextView
                android:layout_margin="5dp"
                android:padding="5dp"
                android:text="@string/authorization_allowed_demand"
                android:textSize="15sp"
                android:layout_column="3"
                android:layout_width="0dp"
                android:layout_weight="1"/>
        </TableRow>
        <TableRow
            android:gravity="end">
            <TextView
                android:background="@drawable/cell_shape"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:id="@+id/establish_date"
                android:textSize="15sp"
                android:layout_column="0"
                android:layout_width="0dp"
                android:layout_weight="1"/>
            <TextView
                android:layout_margin="5dp"
                android:padding="5dp"
                android:text="@string/establish_date"
                android:textSize="15sp"
                android:layout_column="1"
                android:layout_width="0dp"
                android:layout_weight="1"/>
            <TextView
                android:background="@drawable/cell_shape"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:id="@+id/contract_date"
                android:textSize="15sp"
                android:layout_column="2"
                android:layout_width="0dp"
                android:layout_weight="1"/>
            <TextView
                android:layout_margin="5dp"
                android:padding="5dp"
                android:text="@string/contract_date"
                android:textSize="15sp"
                android:layout_column="3"
                android:layout_width="0dp"
                android:layout_weight="1"/>
        </TableRow>
        <TableRow
            android:gravity="end">
            <TextView
                android:background="@drawable/cell_shape"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:id="@+id/temporary_dec_expirement_date"
                android:textSize="15sp"
                android:layout_column="0"
                android:layout_width="0dp"
                android:layout_weight="1"/>
            <TextView
                android:layout_margin="5dp"
                android:padding="5dp"
                android:text="@string/temporary_dec_expirement_date"
                android:textSize="15sp"
                android:layout_column="1"
                android:layout_width="0dp"
                android:layout_weight="1"/>
            <TextView
                android:background="@drawable/cell_shape"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:id="@+id/authorization_expirement_date"
                android:textSize="15sp"
                android:layout_column="2"
                android:layout_width="0dp"
                android:layout_weight="1"/>
            <TextView
                android:layout_margin="5dp"
                android:padding="5dp"
                android:text="@string/authorization_expirement_date"
                android:textSize="15sp"
                android:layout_column="3"
                android:layout_width="0dp"
                android:layout_weight="1"/>
        </TableRow>
        <TableRow
            android:gravity="end">
            <TextView
                android:background="@drawable/cell_shape"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:id="@+id/alpha_tariff"
                android:textSize="15sp"
                android:layout_column="0"
                android:layout_width="0dp"
                android:layout_weight="1"/>
            <TextView
                android:layout_margin="5dp"
                android:padding="5dp"
                android:text="@string/trf_code"
                android:textSize="15sp"
                android:layout_column="1"
                android:layout_width="0dp"
                android:layout_weight="1"/>
            <TextView
                android:background="@drawable/cell_shape"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:id="@+id/main_power"
                android:textSize="15sp"
                android:layout_column="2"
                android:layout_width="0dp"
                android:layout_weight="1"/>
            <TextView
                android:layout_margin="5dp"
                android:padding="5dp"
                android:text="@string/main_power"
                android:textSize="15sp"
                android:layout_column="3"
                android:layout_width="0dp"
                android:layout_weight="1"/>
        </TableRow>
        <TableRow
            android:gravity="end">

            <TextView
                android:visibility="invisible"
                android:background="@drawable/cell_shape"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:textSize="15sp"
                android:layout_column="0"
                android:layout_width="0dp"
                android:layout_weight="1"/>

            <TextView
                android:visibility="invisible"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:text="@string/zone_code"
                android:textSize="15sp"
                android:layout_column="1"
                android:layout_width="0dp"
                android:layout_weight="1" />

            <TextView
                android:background="@drawable/cell_shape"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:id="@+id/misscount_code"
                android:textSize="15sp"
                android:layout_column="0"
                android:layout_width="0dp"
                android:layout_weight="1"/>
            <TextView
                android:layout_margin="5dp"
                android:padding="5dp"
                android:text="@string/misscount_code"
                android:textSize="15sp"
                android:layout_column="1"
                android:layout_width="0dp"
                android:layout_weight="1"/>

        </TableRow>

    </TableLayout>

</FrameLayout>