<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/cartable_tafkik"
                android:background="@drawable/cell_shape_two"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="0.20"
                style="@style/Font_padding_margin"
                android:gravity="center"
                android:text="تفکیک"/>
            <TextView
                android:id="@+id/cartable_number"
                android:background="@drawable/cell_shape_two"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="0.20"
                style="@style/Font_padding_margin"
                android:gravity="center"
                android:text="@string/new_branch_count"/>

            <TextView
                android:id="@+id/cartable_status"
                android:background="@drawable/cell_shape_two"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="0.20"
                android:gravity="center"
                style="@style/Font_padding_margin"
                android:text="@string/new_branch_taarefe"/>

            <TextView
                android:id="@+id/cartable_phone"
                android:background="@drawable/cell_shape_two"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="0.20"
                android:gravity="center"
                style="@style/Font_padding_margin"
                android:text="@string/new_branch_power"/>

            <TextView
                android:id="@+id/cartable_address"
                android:background="@drawable/cell_shape_two"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="0.20"
                android:gravity="center"
                style="@style/Font_padding_margin"
                android:text="@string/new_branch_amper"/>

            <TextView
                android:id="@+id/cartable_subscription_name"
                android:background="@drawable/cell_shape_two"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="0.20"
                android:gravity="center"
                style="@style/Font_padding_margin"
                android:text="@string/new_branch_phase"/>

        </LinearLayout>

        <ListView
            android:background="@color/list_item_title"
            android:id="@+id/visit_place_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

</LinearLayout>