<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:background="@drawable/info_table_shape_2"
        android:padding="5dp"
        android:id="@+id/table_four"
        android:stretchColumns="*"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TableRow
            android:gravity="end">
            <TextView
                android:background="@drawable/cell_shape"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:id="@+id/latest_sell_price"
                android:layout_column="0"
                android:textSize="12sp"/>
            <TextView
                android:padding="5dp"
                android:layout_margin="5dp"
                android:text="@string/latest_sell_price"
                android:textSize="12sp"
                android:layout_column="1"
                android:layout_width="0dp"
                android:layout_weight="1"/>
            <TextView
                android:background="@drawable/cell_shape"
                android:padding="5dp"
                android:layout_margin="5dp"
                android:id="@+id/latest_visit_date"
                android:textSize="12sp"/>
            <TextView
                android:padding="5dp"
                android:layout_margin="5dp"
                android:text="@string/latest_visit_date"
                android:textSize="12sp"
                android:layout_width="0dp"
                android:layout_weight="1"/>
        </TableRow>
        <TableRow
            android:gravity="end">
            <TextView
                android:background="@drawable/cell_shape"
                android:padding="5dp"
                android:layout_margin="5dp"
                android:id="@+id/latest_receive_price"
                android:textSize="12sp"/>
            <TextView
                android:padding="5dp"
                android:layout_margin="5dp"
                android:text="@string/latest_receive_price"
                android:textSize="12sp"
                android:layout_width="0dp"
                android:layout_weight="1"/>
            <TextView
                android:background="@drawable/cell_shape"
                android:padding="5dp"
                android:layout_margin="5dp"
                android:id="@+id/latest_receive_date"
                android:textSize="12sp"/>
            <TextView
                android:padding="5dp"
                android:layout_margin="5dp"
                android:text="@string/latest_receive_date"
                android:textSize="12sp"
                android:layout_width="0dp"
                android:layout_weight="1"/>
        </TableRow>
    </TableLayout>
</FrameLayout>
